# Lane-Segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.py  run_all.sh  train.py
src/duckietown_seg/data/: dataset.py
src/duckietown_seg/engine/: evaluator.py  trainer.py
src/duckietown_seg/losses/: segmentation_losses.py
src/duckietown_seg/metrics/: segmentation_metrics.py
src/duckietown_seg/utils/: logging.py
